--- a/src/components/projects-page/project-page.scss
+++ b/src/components/projects-page/project-page.scss
@@ -1,3 +1,5 @@
+@import "../../index.scss";
+
 .project-container {
   display: flex;
   flex-direction: column;
@@ -7,28 +9,14 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  border-bottom: 3px solid #f8f8f8;
-  border-left: 3px solid #f8f8f8;
+  border-bottom: 3px solid $borderColor;
+  border-left: 3px solid $borderColor;
   background-color: white;
   height: 50px;
 }
 
 .project-menu div {
-  margin: 0 20px 0 20px;
-}
-
-.project-list {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  border-bottom: 3px solid #f8f8f8;
-  border-left: 3px solid #f8f8f8;
-  background-color: white;
-  height: 60px;
-}
-
-.project-list h5 {
-  margin: 0 20px 0 20px;
+  // margin: 0 20px 0 20px;
 }
 
 .button {
@@ -40,11 +28,11 @@
   border-radius: 5px;
   transition: all 0.3s ease;
   font-weight: 700;
-  color: rgb(69, 71, 77);
+  color: $textColor;
 }
 
 .button:hover {
   background-color: #ffffff;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-  color: #83183d;
+  color: $cerryColor;
 }
