--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,11 @@
   box-sizing: border-box;
 }
 
+// $redColor: ;
+$cerryColor: #83183d;
+$borderColor: #f8f8f8;
+$textColor: #45474d;
+
 body {
   color: rgb(69, 71, 77);
   background: #f7f7f7;
