css & popup & goolge & auth & register bgs fixet

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,19 +1,31 @@
 header {
+  display: grid;
+  justify-content: center;
+  align-items: center;
   background-color: #ffffff;
-  /* box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); */
   height: 60px;
-  display: flex;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   align-items: center;
   justify-content: space-between;
   padding: 0 25px 0 25px;
   border-bottom: 3px solid #f8f8f8;
   border-top: 3px solid #f8f8f8;
   font-weight: 600;
+  // position: relative;
 }
 
 .logo {
   height: 28px;
+  justify-content: center;
+  align-items: center;
+  // position: relative;
 }
 
 /* #83183D */
 /* #C5223F */
+
+.signInLogInContainer {
+  display: flex;
+  grid-column-end: end;
+  position: relative;
+}
