--- a/src/components/projects-page/project-page.scss
+++ b/src/components/projects-page/project-page.scss
@@ -9,6 +9,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding: 20px;
   border-bottom: 3px solid $borderColor;
   border-left: 3px solid $borderColor;
   background-color: white;
