--- a/src/components/projectAdd/project-add.scss
+++ b/src/components/projectAdd/project-add.scss
@@ -1,3 +1,4 @@
+@import "../../index.scss";
 .project-list {
   display: flex;
   align-items: center;
@@ -14,6 +15,10 @@
   display: flex;
   flex-direction: column;
   width: 180px;
+
+  h5 {
+    margin-top: 0;
+  }
 }
 
 .input-fields h4 {
@@ -28,6 +33,7 @@
   height: 25px;
   /* padding: 2px; */
   margin-bottom: 10px;
+  border-bottom: none;
 }
 
 .show {
